compiler/tests/fail/common/typealias_duplicate.jazz

type x = u64;
type x = u64;